--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -6,6 +6,22 @@
   animation: 0.35s var(--transition) slideIn forwards;
 }
 
+.slideUp {
+  animation: 0.35s var(--transition) slideUp forwards;
+}
+
+.slideDown {
+  animation: 0.35s var(--transition) slideDown forwards;
+}
+
+.slideRight {
+  animation: 0.35s var(--transition) slideRight forwards;
+}
+
+.slideLeft {
+  animation: 0.35s var(--transition) slideLeft forwards;
+}
+
 .moveForever\:1 {
   animation: move-forever1 6s linear infinite;
 }
@@ -43,6 +59,42 @@
 @keyframes slideIn {
   0% {
     transform: translateX(-300px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateX(300px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(300px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(-800px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    transform: translateX(800px);
   }
   100% {
     transform: translateX(0);
