--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,6 +10,16 @@
     box-shadow: 0 1rem 3rem rgba(52, 58, 64, 0.175);
   }
 
+  .from-primary {
+    --tw-gradient-from: var(--primary);
+    --tw-gradient-stops: var(--tw-gradient-from),
+      var(--tw-gradient-to, rgba(251, 191, 36, 0));
+  }
+
+  .to-primary-dark {
+    --tw-gradient-to: var(--primary-dark);
+  }
+
   @responsive {
     .flex-5\/6 {
       flex: 0 0 75%;
