--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,6 +6,8 @@
 
 body {
   color: var(--primary);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 *:focus:not(.focus-visible) {
