--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,6 +20,10 @@
     --tw-gradient-to: var(--primary-dark);
   }
 
+  .z-60 {
+    z-index: 60;
+  }
+
   @responsive {
     .flex-5\/6 {
       flex: 0 0 75%;
@@ -39,6 +43,10 @@
     .flex-2\/6 {
       flex: 0 0 33.3333%;
       max-width: 33.3333%;
+    }
+
+    .left-unset {
+      left: unset;
     }
   }
 }
