--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,11 +1,12 @@
 :root {
   --transition: cubic-bezier(0.645, 0.045, 0.355, 1);
+  --text-primary: rgb(31 41 55 / 92.5%);
   --primary: #1f2937;
   --primary-dark: #111827;
 }
 
 body {
-  color: var(--primary);
+  color: var(--text-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
