--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,7 @@
 :root {
   --transition: cubic-bezier(0.645, 0.045, 0.355, 1);
   --text-primary: rgb(31 41 55 / 90%);
+  --text-primary-light: rgb(31 41 55 / 70%);
   --primary: #1f2937;
   --primary-dark: #111827;
 }
@@ -12,6 +13,8 @@ body {
 }
 
 p {
+  color: var(--text-primary-light);
+  font-weight: 500;
   line-height: 1.8;
 }
 
