--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,14 @@
 @tailwind utilities;
 
 @layer utilities {
+  .hover\:float {
+    @apply transform transition hover:-translate-y-1;
+  }
+
+  .hover\:scale {
+    @apply transform transition hover:scale-95;
+  }
+
   .shadow-4xl {
     box-shadow: 0 1rem 3rem rgba(52, 58, 64, 0.175);
   }
