--- a/src/css/base.css
+++ b/src/css/base.css
@@ -10,6 +10,7 @@ body {
   color: var(--text-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 p {
