feat: update primary color

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -2,7 +2,7 @@
   --transition: cubic-bezier(0.645, 0.045, 0.355, 1);
   --text-primary: rgb(31 41 55 / 90%);
   --text-primary-light: rgb(31 41 55 / 70%);
-  --primary: #1f2937;
+  --primary: #1a222f;
   --primary-dark: #111827;
 }
 
